# openfit

./: .gitignore  404.html  AGENT_GUIDANCE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OPENASSAYFLOW_CLAUDE.md  PLANS.md  README.md  ROADMAP.md  codecov.yml  drda.R  extract_drda.py  gen_nb1.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  test_out.html
.github/: PULL_REQUEST_TEMPLATE.md
benchmark/: index.html
confidence-intervals/: index.html
coverage/: index.html
docs/: benchmark.md  confidence-intervals.md  coverage.md  getting-started.md  global-fit.md  index.md  model-comparison.md  models.md  reproducibility.md  requirements.txt  rout.md  weighting.md
getting-started/: index.html
global-fit/: index.html
model-comparison/: index.html
models/: index.html
notebooks/: 01_dose_response.ipynb  03_rout_outlier_detection.ipynb  04_global_fitting.ipynb  05_reproducibility.ipynb  06_benchmark_vs_scipy.ipynb
paper/: paper.bib  paper.md
recipe/: README.md  meta.yaml
reproducibility/: index.html
rout/: index.html
search/: search_index.json
tests/: conftest.py  test_bands.py  test_bands_leverage.py  test_binding_models.py  test_compare.py  test_compare_reference.py  test_constraints_batch.py  test_covariance_exposure.py  test_diagnostics.py  test_docx_report.py  test_fit.py  test_global_fit.py  test_global_fit_reference.py  test_io.py  test_jacobians.py  test_leverage.py  test_models.py  test_outliers.py  test_pdf_report.py  test_rout_reference.py  test_spec.py  (+3 more)
(+83 files in other folders)
