[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openfit"
version = "0.1.1"
description = "Reproducible, open-source nonlinear curve fitting with publication-quality reports."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Priyam Thakar", email = "priyamthakar1@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "pydantic>=2.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.9",
    "rich>=13",
]
reports = [
    "jinja2>=3.1",
    "reportlab>=4.0",
    "python-docx>=1.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
    "build",
    "twine",
    "jinja2>=3.1",
]

[project.scripts]
openfit = "openfit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/openfit"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
